fixed view on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -16,6 +16,7 @@ pre {
 #code-display {
     padding-top: 0;
     padding-bottom: 0;
+    white-space: pre-wrap;
 }
 
 .line-numbers {
